# embdgen

./: .gitignore  LICENSE  README.md  dev-requirements.txt
.github/workflows/: publish_doc.yml  tests.yml
docs/: conf.py  config.rst  index.rst
docs/_ext/: config.py
docs/_static/css/: custom_theme.css
docs/core/: index.rst
docs/core/content/: index.rst
docs/core/label/: index.rst
docs/core/partition/: index.rst
docs/core/plugins/: index.rst
docs/core/plugins/content/: ArchiveContent.rst  Ext4Content.rst  Fat32Content.rst  FilesContent.rst  RawContent.rst  ViertyContent.rst  index.rst
docs/core/plugins/label/: GPT.rst  MBR.rst  index.rst
docs/core/plugins/partition/: EmptyPartition.rst  Ext4Partition.rst  Fat32Partition.rst  PartitionPartition.rst  RawPartition.rst  index.rst
docs/core/plugins/region/: EmptyRegion.rst  PartitionRegion.rst  RawRegion.rst  index.rst
docs/core/region/: index.rst
docs/core/utils/: FakeRoot.rst  SizeType.rst  image.rst  index.rst
docs/examples/: cominit-plain.yml  cominit-verity.yml  simple.yml
docs/plugins/: index.rst
docs/plugins/cominit/: index.rst
docs/plugins/cominit/content/: CominitContent.rst
docs/plugins/config-yaml/: index.rst
embdgen-cominit/: README.md  pyproject.toml
embdgen-cominit/package/: debian.changelog  debian.control  debian.embdgen-cominit.dsc  debian.rules
embdgen-cominit/src/embdgen/plugins/content/: CominitContent.py
embdgen-cominit/tests/: test_CominitContent.py
embdgen-config-yaml/: README.md  pyproject.toml
embdgen-config-yaml/package/: debian.changelog  debian.control  debian.embdgen-config-yaml.dsc
embdgen-config-yaml/src/embdgen/plugins/config/: YAML.py
embdgen-config-yaml/src/embdgen/plugins/config/yaml/validator/: Content.py  Factory.py  Label.py  ListBase.py  ObjectBase.py  Partition.py  Path.py  Region.py  Size.py  StringList.py
embdgen-core/: README.md  pyproject.toml
embdgen-core/package/: debian.changelog  debian.control  debian.embdgen-core.dsc
embdgen-core/src/embdgen/core/cli/: CLI.py  __init__.py
embdgen-core/src/embdgen/core/config/: BaseConfig.py  Factory.py
embdgen-core/src/embdgen/core/content/: BaseContent.py  BinaryContent.py  Factory.py  FilesContentProvider.py  __init__.py
embdgen-core/src/embdgen/core/label/: BaseLabel.py  Factory.py  __init__.py
embdgen-core/src/embdgen/core/partition/: BaseContentPartition.py  BasePartition.py  Factory.py  __init__.py
embdgen-core/src/embdgen/core/region/: BaseContentRegion.py  BaseRegion.py  Factory.py  __init__.py
embdgen-core/src/embdgen/core/utils/: FakeRoot.py  SizeType.py  class_factory.py  image.py
embdgen-core/src/embdgen/plugins/content/: ArchiveContent.py  EmptyContent.py  Ext4Content.py  Fat32Content.py  FilesContent.py  RawContent.py  ResizeExt4Content.py  VerityContent.py
embdgen-core/src/embdgen/plugins/label/: GPT.py  MBR.py
embdgen-core/src/embdgen/plugins/partition/: EmptyPartition.py  Ext4Partition.py  Fat32Partition.py  PartitionPartition.py  RawPartition.py
embdgen-core/src/embdgen/plugins/region/: EmptyRegion.py  PartitionRegion.py  RawRegion.py
embdgen-core/tests/cli/: test_cli.py
embdgen-core/tests/config/: test_BaseConfig.py  test_Factory.py
embdgen-core/tests/content/: test_ArchiveContent.py  test_EmptyContent.py  test_Ext4Content.py  test_Factory.py  test_Fat32Content.py  test_FilesContent.py  test_RawContent.py  test_ResizeExt4Content.py  test_VerityContent.py
embdgen-core/tests/label/: test_Factory.py  test_GPT.py  test_MBR.py
embdgen-core/tests/partition/: test_EmptyPartition.py  test_Ext4Partition.py  test_Factory.py  test_Fat32Partition.py  test_PartitionPartition.py  test_RawPartition.py
embdgen-core/tests/region/: test_EmptyRegion.py  test_Factory.py  test_PartitionRegion.py  test_RawRegion.py
embdgen-core/tests/utils/: test_FakeRoot.py  test_SizeType.py  test_class_factory.py  test_image.py
embdgen-core/tests/utils/plugintest/classkey/: TestPlugins.py
embdgen-core/tests/utils/plugintest/simple/: TestPlugins.py  TestPlugins2.py  __init__.py
scripts/: run_build.sh  run_lint.sh  run_mypy.sh  run_tests.sh
