[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/embdgen/plugins/content/CominitContent.py"

[tool.hatch.build.targets.wheel]
packages = ["src/embdgen"]

[project]
name = "embdgen-cominit"
dynamic = ["version"]

authors = [
  { name="AOX Technologies GmbH", email="info@aox.de" },
  { name="Elektrobit GmbH", email="info@elektrobit.com" },
]
description = "Cominit content plugin for the EMBedded Disk GENerator (embdgen)"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Embedded Systems",
]
requires-python = ">=3.9"
dependencies = [
    "embdgen-core",
    "cryptography"
]

[project.urls]
Homepage = "https://github.com/Elektrobit/embdgen"



[tool.pylint.format]
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = [
    'missing-module-docstring',
    'missing-function-docstring',
    'missing-class-docstring',
    'invalid-name',
    'broad-exception-raised',
    'too-few-public-methods',
    'too-many-instance-attributes',
    'fixme'
]

[tool.pytest.ini_options]
minversion = "6.2.5"
addopts = "--cov --cov-context=test --cov-report html -rP"
testpaths = [ "tests" ]
#tmp_path_retention_policy = "none"

[tool.coverage.paths]
source = [
    "src/embdgen",
    "*/site-packages/embdgen"
]

[tool.coverage.run]
branch = true
source = ["embdgen", "src"]

[tool.coverage.report]
include_namespace_packages = true
exclude_also = [
    "@(abc\\.)?abstractmethod",
    "def __repr__"
]
include = ["src/*"]

[tool.coverage.html]
show_contexts = true

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
explicit_package_bases = true
