[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/embdgen/plugins/config/YAML.py"

[tool.hatch.build.targets.wheel]
packages = ["src/embdgen"]

[project]
name = "embdgen-config-yaml"
dynamic = ["version"]

authors = [
  { name="AOX GmbH", email="info@aox.de" },
  { name="Elektrobit GmbH", email="info@elektrobit.com" },
]
description = "Yaml config loader for the EMBedded Disk GENerator (embdgen)"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.8"
dependencies = [
    "embdgen-core",
    "strictyaml"
]

[project.urls]
Homepage = "https://to.be.defined"


[tool.pylint.format]
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = [
    'missing-module-docstring',
    'missing-function-docstring',
    'missing-class-docstring',
    'invalid-name',
    'broad-exception-raised',
    'too-few-public-methods',
    'too-many-instance-attributes'
]
