[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/embdgen/plugins/config/YAML.py"

[tool.hatch.build.targets.wheel]
packages = ["src/embdgen"]

[project]
name = "embdgen-config-yaml"
dynamic = ["version"]

authors = [
  { name="AOX Technologies GmbH", email="info@aox.de" },
  { name="Elektrobit GmbH", email="info@elektrobit.com" },
]
description = "Yaml config loader for the EMBedded Disk GENerator (embdgen)"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Embedded Systems",
]
requires-python = ">=3.9"
dependencies = [
    "embdgen-core",
    "strictyaml"
]

[project.urls]
Homepage = "https://github.com/Elektrobit/embdgen"


[tool.pylint.format]
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = [
    'missing-module-docstring',
    'missing-function-docstring',
    'missing-class-docstring',
    'invalid-name',
    'broad-exception-raised',
    'too-few-public-methods',
    'too-many-instance-attributes'
]

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "strictyaml.*"
ignore_missing_imports = true
